# yinghuoji-desktop

./: .eslintrc.cjs  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: capture-screenshots.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  app.rs  backup.rs  common.rs  features.rs  forecast.rs  learning.rs  mod.rs
src/api/: index.ts
src/api/modules/: ai.ts  auth.ts  category.ts  charts.ts  countdown.ts  dashboard.ts  data.ts  desktop.ts  leaderboard.ts  milestone.ts  motto.ts  records.ts  stage.ts
src/components/common/: BrandMark.vue  ThemeSwitcher.vue
src/components/layout/: MainLayout.vue  PageContainer.vue
src/components/milestones/: MilestoneForm.vue  MilestoneItem.vue
src/components/motto/: MottoItem.vue
src/composables/: index.ts  useDateFormat.ts  useDialog.ts  useFocusTimer.ts  useFormValidation.ts  useLoading.ts  useTable.ts
src/config/: index.ts
src/constants/: api.ts  app.ts  index.ts  routes.ts
src/lib/: echarts.ts
src/plugins/: message.ts
src/router/: index.ts
src/stores/: category.ts  index.ts
src/stores/modules/: aiAssistant.ts  auth.ts  category.ts  charts.helpers.ts  charts.ts  countdown.ts  dashboard.ts  leaderboard.ts  milestone.ts  motto.ts  records.ts  settings.ts  (+2 more)
src/styles/: index.scss
src/types/: index.ts
src/utils/: api.ts  request.ts  updater.ts
(+103 files in other folders)
