[package]
name = "yinghuoji_desktop"
version = "3.0.6"
description = "萤火集"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "yinghuoji_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "serde_json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-opener = "2.0.3"
tauri-plugin-updater = "2.10.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
